yamcs-web/src/uss-renderer/expressions/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(formula) { return formula; },
      peg$c1 = function(head, tail) {
          return {
            type: 'Formula',
            body: buildList(head, tail, 1)
          };
        },
      peg$c2 = function(expression) {
          return {
            type: 'ExpressionStatement',
            expression: expression
          }
        },
      peg$c3 = " ",
      peg$c4 = peg$literalExpectation(" ", false),
      peg$c5 = "\t",
      peg$c6 = peg$literalExpectation("\t", false),
      peg$c7 = peg$otherExpectation("end of line"),
      peg$c8 = "\n",
      peg$c9 = peg$literalExpectation("\n", false),
      peg$c10 = "\r\n",
      peg$c11 = peg$literalExpectation("\r\n", false),
      peg$c12 = "\r",
      peg$c13 = peg$literalExpectation("\r", false),
      peg$c14 = ";",
      peg$c15 = peg$literalExpectation(";", false),
      peg$c16 = peg$anyExpectation(),
      peg$c17 = "and",
      peg$c18 = peg$literalExpectation("and", true),
      peg$c19 = "else",
      peg$c20 = peg$literalExpectation("else", true),
      peg$c21 = "equals",
      peg$c22 = peg$literalExpectation("equals", true),
      peg$c23 = "false",
      peg$c24 = peg$literalExpectation("false", true),
      peg$c25 = "if",
      peg$c26 = peg$literalExpectation("if", true),
      peg$c27 = "in",
      peg$c28 = peg$literalExpectation("in", true),
      peg$c29 = "then",
      peg$c30 = peg$literalExpectation("then", true),
      peg$c31 = "not",
      peg$c32 = peg$literalExpectation("not", true),
      peg$c33 = "or",
      peg$c34 = peg$literalExpectation("or", true),
      peg$c35 = "true",
      peg$c36 = peg$literalExpectation("true", true),
      peg$c37 = "xor",
      peg$c38 = peg$literalExpectation("xor", true),
      peg$c39 = function(symbol) {
          return symbol;
        },
      peg$c40 = peg$otherExpectation("identifier"),
      peg$c41 = function(head, tail) {
          return {
            type: 'Symbol',
            name: head + tail.join('')
          };
        },
      peg$c42 = /^[a-zA-Z]/,
      peg$c43 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c44 = "_",
      peg$c45 = peg$literalExpectation("_", false),
      peg$c46 = /^[a-zA-Z0-9_]/,
      peg$c47 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c48 = peg$otherExpectation("boolean"),
      peg$c49 = function() { return { type: 'BooleanLiteral', value: true }; },
      peg$c50 = function() { return { type: 'BooleanLiteral', value: false }; },
      peg$c51 = peg$otherExpectation("integer"),
      peg$c52 = /^[0-9]/,
      peg$c53 = peg$classExpectation([["0", "9"]], false, false),
      peg$c54 = function() { return { type: 'NumericLiteral', value: parseInt(text(), 10) }; },
      peg$c55 = peg$otherExpectation("string"),
      peg$c56 = "\"",
      peg$c57 = peg$literalExpectation("\"", false),
      peg$c58 = /^[^\n\r\f"]/,
      peg$c59 = peg$classExpectation(["\n", "\r", "\f", "\""], true, false),
      peg$c60 = function(chars) {
          return { type: 'StringLiteral', value: chars.join('') };
        },
      peg$c61 = "'",
      peg$c62 = peg$literalExpectation("'", false),
      peg$c63 = /^[^\n\r\f']/,
      peg$c64 = peg$classExpectation(["\n", "\r", "\f", "'"], true, false),
      peg$c65 = "(",
      peg$c66 = peg$literalExpectation("(", false),
      peg$c67 = ")",
      peg$c68 = peg$literalExpectation(")", false),
      peg$c69 = function(expression) { return expression; },
      peg$c70 = "[",
      peg$c71 = peg$literalExpectation("[", false),
      peg$c72 = "]",
      peg$c73 = peg$literalExpectation("]", false),
      peg$c74 = function(argument) {
          return {
            type: 'UnaryExpression',
            operator: 'ABS',
            argument: argument,
          };
        },
      peg$c75 = function(operator, argument) {
          return {
            type: 'UnaryExpression',
            operator: operator,
            argument: argument,
          };
        },
      peg$c76 = "-",
      peg$c77 = peg$literalExpectation("-", false),
      peg$c78 = "+",
      peg$c79 = peg$literalExpectation("+", false),
      peg$c80 = function(callee, args) {
          return {
            type: 'CallExpression',
            callee: callee,
            arguments: args
          };
        },
      peg$c81 = function(args) {
          return optionalList(extractOptional(args, 0));
        },
      peg$c82 = ",",
      peg$c83 = peg$literalExpectation(",", false),
      peg$c84 = function(head, tail) {
          return buildList(head, tail, 3);
        },
      peg$c85 = function(argument, operator) {
          return {
            type: 'UnaryExpression',
            operator: operator,
            argument: argument
          };
        },
      peg$c86 = "%",
      peg$c87 = peg$literalExpectation("%", false),
      peg$c88 = "\xB2",
      peg$c89 = peg$literalExpectation("\xB2", false),
      peg$c90 = "*",
      peg$c91 = peg$literalExpectation("*", false),
      peg$c92 = "/",
      peg$c93 = peg$literalExpectation("/", false),
      peg$c94 = "^",
      peg$c95 = peg$literalExpectation("^", false),
      peg$c96 = function(head, tail) {
            return buildBinaryExpression(head, tail);
          },
      peg$c97 = function(head, tail) {
          return buildBinaryExpression(head, tail);
        },
      peg$c98 = "<=",
      peg$c99 = peg$literalExpectation("<=", false),
      peg$c100 = ">=",
      peg$c101 = peg$literalExpectation(">=", false),
      peg$c102 = "<",
      peg$c103 = peg$literalExpectation("<", false),
      peg$c104 = ">",
      peg$c105 = peg$literalExpectation(">", false),
      peg$c106 = "==",
      peg$c107 = peg$literalExpectation("==", false),
      peg$c108 = "!=",
      peg$c109 = peg$literalExpectation("!=", false),
      peg$c110 = "<>",
      peg$c111 = peg$literalExpectation("<>", false),
      peg$c112 = function(head, tail) {
           return buildBinaryExpression(head, tail);
        },
      peg$c113 = "&",
      peg$c114 = peg$literalExpectation("&", false),
      peg$c115 = /^[&]/,
      peg$c116 = peg$classExpectation(["&"], false, false),
      peg$c117 = "~",
      peg$c118 = peg$literalExpectation("~", false),
      peg$c119 = "|",
      peg$c120 = peg$literalExpectation("|", false),
      peg$c121 = /^[|]/,
      peg$c122 = peg$classExpectation(["|"], false, false),
      peg$c123 = function(head, tail) {
          return buildLogicalExpression(head, tail);
        },
      peg$c124 = "&&",
      peg$c125 = peg$literalExpectation("&&", false),
      peg$c126 = "||",
      peg$c127 = peg$literalExpectation("||", false),
      peg$c128 = function(test, consequent, alternate) {
            return {
              type: 'ConditionalExpression',
              test: test,
              consequent: consequent,
              alternate: alternate
            };
        },
      peg$c129 = function(test, consequent) {
          return {
            type: 'ConditionalExpression',
            test: test,
            consequent: consequent,
            alternate: undefined
          };
        },
      peg$c130 = "=",
      peg$c131 = peg$literalExpectation("=", false),
      peg$c132 = function(left, right) {
          return {
            type: 'AssignmentExpression',
            left: left,
            right: right
          };
        },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseFormula();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFormula() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseExpressionStatement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseExpressionStatement();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseExpressionStatement();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseExpressionStatement() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseAssignmentExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEOS();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    s0 = [];
    s1 = peg$parseWhiteSpace();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseWhiteSpace();
    }

    return s0;
  }

  function peg$parse__() {
    var s0, s1;

    s0 = [];
    s1 = peg$parseWhiteSpace();
    if (s1 === peg$FAILED) {
      s1 = peg$parseLineTerminatorSequence();
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseWhiteSpace();
      if (s1 === peg$FAILED) {
        s1 = peg$parseLineTerminatorSequence();
      }
    }

    return s0;
  }

  function peg$parseWhiteSpace() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 32) {
      s0 = peg$c3;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 9) {
        s0 = peg$c5;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
    }

    return s0;
  }

  function peg$parseLineTerminatorSequence() {
    var s0, s1;

    peg$silentFails++;
    if (input.charCodeAt(peg$currPos) === 10) {
      s0 = peg$c8;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c10) {
        s0 = peg$c10;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 13) {
          s0 = peg$c12;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }

    return s0;
  }

  function peg$parseEOS() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLineTerminatorSequence();
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 59) {
          s2 = peg$c14;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse__();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseEOF();
          if (s2 !== peg$FAILED) {
            s1 = [s1, s2];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseEOF() {
    var s0, s1;

    s0 = peg$currPos;
    peg$silentFails++;
    if (input.length > peg$currPos) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    peg$silentFails--;
    if (s1 === peg$FAILED) {
      s0 = void 0;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAND() {
    var s0;

    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c17) {
      s0 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }

    return s0;
  }

  function peg$parseELSE() {
    var s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c19) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c20); }
    }

    return s0;
  }

  function peg$parseEQUALS() {
    var s0;

    if (input.substr(peg$currPos, 6).toLowerCase() === peg$c21) {
      s0 = input.substr(peg$currPos, 6);
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c22); }
    }

    return s0;
  }

  function peg$parseFALSE() {
    var s0;

    if (input.substr(peg$currPos, 5).toLowerCase() === peg$c23) {
      s0 = input.substr(peg$currPos, 5);
      peg$currPos += 5;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c24); }
    }

    return s0;
  }

  function peg$parseIF() {
    var s0;

    if (input.substr(peg$currPos, 2).toLowerCase() === peg$c25) {
      s0 = input.substr(peg$currPos, 2);
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c26); }
    }

    return s0;
  }

  function peg$parseIN() {
    var s0;

    if (input.substr(peg$currPos, 2).toLowerCase() === peg$c27) {
      s0 = input.substr(peg$currPos, 2);
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c28); }
    }

    return s0;
  }

  function peg$parseTHEN() {
    var s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c29) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c30); }
    }

    return s0;
  }

  function peg$parseNOT() {
    var s0;

    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c31) {
      s0 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c32); }
    }

    return s0;
  }

  function peg$parseOR() {
    var s0;

    if (input.substr(peg$currPos, 2).toLowerCase() === peg$c33) {
      s0 = input.substr(peg$currPos, 2);
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c34); }
    }

    return s0;
  }

  function peg$parseTRUE() {
    var s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c35) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c36); }
    }

    return s0;
  }

  function peg$parseXOR() {
    var s0;

    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c37) {
      s0 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c38); }
    }

    return s0;
  }

  function peg$parseReservedWord() {
    var s0;

    s0 = peg$parseBooleanLiteral();
    if (s0 === peg$FAILED) {
      s0 = peg$parseAND();
      if (s0 === peg$FAILED) {
        s0 = peg$parseELSE();
        if (s0 === peg$FAILED) {
          s0 = peg$parseEQUALS();
          if (s0 === peg$FAILED) {
            s0 = peg$parseIF();
            if (s0 === peg$FAILED) {
              s0 = peg$parseIN();
              if (s0 === peg$FAILED) {
                s0 = peg$parseTHEN();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseNOT();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseOR();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseTRUE();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseXOR();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseIdentifier() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    s2 = peg$parseReservedWord();
    peg$silentFails--;
    if (s2 === peg$FAILED) {
      s1 = void 0;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseIdentifierSymbol();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c39(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseIdentifierSymbol() {
    var s0, s1, s2, s3;
